--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@tanstack/vue-table": "^8.21.3",
     "@vueuse/core": "^14.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.574.0",
     "pinia": "^3.0.4",
-    "reka-ui": "^2.8.0",
+    "reka-ui": "^2.8.2",
     "tailwind-merge": "^3.5.0",
     "vue": "beta",
     "vue-router": "^4.6.4"
