--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@ceereals/vue-pdf": "^0.2.1",
     "@tailwindcss/vite": "^4.2.0",
     "@tsconfig/node24": "^24.0.4",
     "@types/node": "^24.10.13",
